--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
+	<uses-permission android:name="android.permission.SET_WALLPAPER"/>
+	
     <application
         android:name="com.qlfsoft.app.common.UILApplication"
         android:allowBackup="true"
@@ -71,6 +72,7 @@
             android:theme="@style/StyledIndicators"
             android:label="@string/title_activity_home" >
         </activity>
+        <activity android:name=".home.ShowImageActivity"></activity>
     </application>
 
 </manifest>
